fix the overflow issue on mobile.

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -401,6 +401,7 @@ body,
     }
   }
   &__search {
+    overflow: hidden;
     &-input {
       position: relative;
       background-color: rgba(255, 255, 255, 0.08);
@@ -504,7 +505,7 @@ body,
       color: #fa85bc;
     }
   }
-} 
+}
 
 
 .pagination-nav__link,
